--- a/src/vboa/templates/eboa_nav/linked_events_nav.html
+++ b/src/vboa/templates/eboa_nav/linked_events_nav.html
@@ -11,7 +11,7 @@
   </div>
   <!-- /.panel-heading -->
   <div class="panel-body">
-    <table width="100%" class="table table-striped table-bordered table-hover table-search" id="events">
+    <table width="100%" class="table table-striped table-bordered table-hover table-search" id="linked-events-table">
       <thead>
         <tr>
           <th></th>
@@ -20,9 +20,10 @@
           <th>Gauge system</th>
           <th>Start</th>
           <th>Stop</th>
-          <th>Ingestion Time</th>
+          <th>Duration (s)</th>
+          <th>Ingestion time</th>
           <th>Source</th>
-          <th>Explicit Reference</th>
+          <th>Explicit reference</th>
           <th>Linked events</th>
           <th>Event UUID</th>
         </tr>
@@ -52,6 +53,7 @@
           <td>{{ event.gauge.system }}</td>
           <td>{{ event.start.isoformat() }}</td>
           <td>{{ event.stop.isoformat() }}</td>
+          <td>{{ (event.stop - event.start).total_seconds() }}</td>
           <td>{{ event.ingestion_time.isoformat() }}</td>
           {% set source_uuid = event.source.source_uuid %}
           <td><a href="/eboa_nav/query-source/{{ source_uuid }}">{{ event.source.name }}</a></td>
@@ -74,9 +76,10 @@
           <th>Gauge system</th>
           <th>Start</th>
           <th>Stop</th>
-          <th>Ingestion Time</th>
+          <th>Duration (s)</th>
+          <th>Ingestion time</th>
           <th>Source</th>
-          <th>Explicit Reference</th>
+          <th>Explicit reference</th>
           <th>Linked events</th>
           <th>Event UUID</th>
         </tr>
