--- a/src/vboa/templates/general_view_alerts/general_view_alerts_summary_content.html
+++ b/src/vboa/templates/general_view_alerts/general_view_alerts_summary_content.html
@@ -3,7 +3,7 @@
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#summary-general-view-alerts">General view alerts summary <span class="fa fa-angle-double-down"></span></a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#summary-general-view-alerts">General view of alerts summary <span class="fa fa-angle-double-down"></span></a>
       </h3>
     </div>
     <!-- /.panel-heading -->
