--- a/src/vboa/templates/general_view_alerts/general_view_alerts.html
+++ b/src/vboa/templates/general_view_alerts/general_view_alerts.html
@@ -16,7 +16,7 @@
 {% include "general_view_alerts/general_view_alerts_query.html" %}
 
 <!-- Pagination -->
-{% with route = "/general_view_alerts/general-view-alerts-pages", elements = elements, filters = filters %}
+{% with route = "/general-view-alerts-pages", elements = elements, filters = filters %}
 {% include "vboa/pagination.html" %}
 {% endwith %}
 
@@ -34,20 +34,7 @@
 {% endblock %}
 {% block scripts %}
 {{ super() }}
-<script type="text/javascript">
-  {% if alerts|length > 0 %}
-  {% with sources_alerts=sources_alerts, events_alerts=events_alerts, annotations_alerts=annotations_alerts, reports_alerts=reports_alerts, ers_alerts=ers_alerts %}
-  {% include "graphs/alerts_to_json_for_timeline.js" %}
-  {% endwith %}
-  vboa.create_alert_timeline(alerts, "timeline-general-view-alerts");
-  {% endif %}
-  {% if sliding_window %}
-  var parameters = {
-  "window_delay": "{{ sliding_window['window_delay'] }}",
-  "window_size": "{{ sliding_window['window_size'] }}",
-  }
-  var repeat_cycle = {{ sliding_window['repeat_cycle'] }}
-  vboa.update_view(parameters, repeat_cycle, "/general_view_alerts/sliding_general_view_alerts_parameters");
-  {% endif %}
-</script>
+
+{% include "general_view_alerts/general_view_alerts_scripts.html" %}
+
 {% endblock %}
