Fix the name of two tabs

--- a/src/vboa/templates/eboa_nav/eboa_nav.html
+++ b/src/vboa/templates/eboa_nav/eboa_nav.html
@@ -30,8 +30,8 @@
     <li {% block li_active_sources %} {% endblock %}><a href="#nav-sources">Sources</a></li>
     <li {% block li_active_explicit_references %} {% endblock %}><a href="#nav-explicit-references">Explicit references</a></li>
     <li {% block li_active_gauges %} {% endblock %}><a href="#nav-gauges">Gauges</a></li>
-    <li {% block li_active_annotation_cnfs %} {% endblock %}><a href="#nav-annotation-cnfs">Annotation Cnfs</a></li>
-    <li {% block li_active_dim_signatures %} {% endblock %}><a href="#nav-dim-signatures">DIM Signatures</a></li>
+    <li {% block li_active_annotation_cnfs %} {% endblock %}><a href="#nav-annotation-cnfs">Annotation configurations</a></li>
+    <li {% block li_active_dim_signatures %} {% endblock %}><a href="#nav-dim-signatures">DIM signatures</a></li>
   </ul>
   <div class="tab-content">
     <div class="tab-pane {% block div_active_events %} {% endblock %}" id="nav-events">
