--- a/src/vboa/templates/eboa_nav/annotation_cnfs_nav.html
+++ b/src/vboa/templates/eboa_nav/annotation_cnfs_nav.html
@@ -12,11 +12,12 @@
 {% include "vboa/pagination.html" %}
 {% endwith %}
 
-<div class="panel panel-green">
+<div class="panel panel-default">
   <div class="panel-heading">
     Table of annotation configurations
   </div>
   <!-- /.panel-heading -->
+  {% if annotation_cnfs|length > 0 %}
   <div class="panel-body">
     <table width="100%" class="table table-striped table-bordered table-hover table-search" id="annotation-cnfs-table">
       <thead>
@@ -47,6 +48,13 @@
       </tfoot>
     </table>
   </div>
+  {% else %}
+  <div id="annotation-cnfs-nav-no-data">
+    <br/>
+    <p style="text-indent: 1em">There have been not found any "annotation configurations" with the requested filters.</p>
+    <br/>
+  </div>
+  {% endif %}
   <!-- /.panel-body -->
 </div>
 <!-- /.panel -->
