--- a/src/vboa/templates/eboa_nav/annotations_nav.html
+++ b/src/vboa/templates/eboa_nav/annotations_nav.html
@@ -16,6 +16,7 @@
     Table of annotations
   </div>
   <!-- /.panel-heading -->
+  {% if annotations|length > 0 %}
   <div class="panel-body">
     <table width="100%" class="table table-striped table-bordered table-hover table-search" id="annotations-table">
       <thead>
@@ -56,6 +57,13 @@
       </tfoot>
     </table>
   </div>
+  {% else %}
+  <div id="annotations-nav-no-data">
+    <br/>
+    <p style="text-indent: 1em">There have been not found any "annotations" with the requested filters.</p>
+    <br/>
+  </div>
+  {% endif %}
   <!-- /.panel-body -->
 </div>
 <!-- /.panel -->
