--- a/src/vboa/templates/eboa_nav/dim_signatures_nav.html
+++ b/src/vboa/templates/eboa_nav/dim_signatures_nav.html
@@ -12,11 +12,12 @@
 {% include "vboa/pagination.html" %}
 {% endwith %}
 
-<div class="panel panel-green">
+<div class="panel panel-default">
   <div class="panel-heading">
     Table of DIM signatures
   </div>
   <!-- /.panel-heading -->
+  {% if dim_signatures|length > 0 %}
   <div class="panel-body">
     <table width="100%" class="table table-striped table-bordered table-hover table-search" id="dim-signatures-table">
       <thead>
@@ -50,6 +51,13 @@
       </tfoot>
     </table>
   </div>
+  {% else %}
+  <div id="dim-signatures-nav-no-data">
+    <br/>
+    <p style="text-indent: 1em">There have been not found any "dim signatures" with the requested filters.</p>
+    <br/>
+  </div>
+  {% endif %}
   <!-- /.panel-body -->
 </div>
 <!-- /.panel -->
