--- a/src/vboa/templates/eboa_nav/events_nav.html
+++ b/src/vboa/templates/eboa_nav/events_nav.html
@@ -16,6 +16,7 @@
     Table of events
   </div>
   <!-- /.panel-heading -->
+  {% if events|length > 0 %}
   <div class="panel-body">
     <table width="100%" class="table table-striped table-bordered table-hover table-search" id="events-table">
       <thead>
@@ -72,10 +73,17 @@
       </tfoot>
     </table>
   </div>
+  {% else %}
+  <div id="events-nav-no-data">
+    <br/>
+    <p style="text-indent: 1em">There have been not found any "events" with the requested filters.</p>
+    <br/>
+  </div>
+  {% endif %}
   <!-- /.panel-body -->
 </div>
 <!-- /.panel -->
-{% if show["timeline"] %}
+{% if show["timeline"] and events|length > 0 %}
 <div class="panel panel-default">
   <div class="panel-heading">
     Timeline of events
