--- a/src/vboa/templates/eboa_nav/annotations_nav.html
+++ b/src/vboa/templates/eboa_nav/annotations_nav.html
@@ -11,12 +11,12 @@
 {% include "vboa/pagination.html" %}
 {% endwith %}
 
+{% if annotations|length > 0 %}
 <div class="panel panel-default">
   <div class="panel-heading">
     Table of annotations
   </div>
   <!-- /.panel-heading -->
-  {% if annotations|length > 0 %}
   <div class="panel-body">
     <table width="100%" class="table table-striped table-bordered table-hover table-search" id="annotations-table">
       <thead>
@@ -57,13 +57,6 @@
       </tfoot>
     </table>
   </div>
-  {% else %}
-  <div id="annotations-nav-no-data">
-    <br/>
-    <p style="text-indent: 1em">There have been not found any "annotations" with the requested filters.</p>
-    <br/>
-  </div>
-  {% endif %}
   <!-- /.panel-body -->
 </div>
 <!-- /.panel -->
@@ -76,6 +69,20 @@
   <div class="panel-body">
     <div id="annotations-nav-map">
     </div>
+  </div>
+  <!-- /.panel-body -->
+</div>
+<!-- /.panel -->
+{% endif %}
+{% else %}
+<div class="panel panel-default">
+  <div class="panel-heading">
+    Table of ingested annotations
+  </div>
+  <div id="annotations-nav-no-data">
+    <br/>
+    <p style="text-indent: 1em">There have been not found any "annotations" with the requested filters.</p>
+    <br/>
   </div>
   <!-- /.panel-body -->
 </div>
