--- a/src/vboa/templates/eboa_nav/gauges_nav.html
+++ b/src/vboa/templates/eboa_nav/gauges_nav.html
@@ -12,12 +12,12 @@
 {% include "vboa/pagination.html" %}
 {% endwith %}
 
+{% if gauges|length > 0 %}
 <div class="panel panel-default">
   <div class="panel-heading">
     Table of gauges
   </div>
   <!-- /.panel-heading -->
-  {% if gauges|length > 0 %}
   <div class="panel-body">
     <table width="100%" class="table table-striped table-bordered table-hover table-search" id="gauges-table">
       <thead>
@@ -48,13 +48,6 @@
       </tfoot>
     </table>
   </div>
-  {% else %}
-  <div id="gauges-nav-no-data">
-    <br/>
-    <p style="text-indent: 1em">There have been not found any "gauges" with the requested filters.</p>
-    <br/>
-  </div>
-  {% endif %}
   <!-- /.panel-body -->
 </div>
 <!-- /.panel -->
@@ -67,6 +60,20 @@
   <div class="panel-body">
     <div class="network-gauges" id="gauges-nav-network">
     </div>
+  </div>
+  <!-- /.panel-body -->
+</div>
+<!-- /.panel -->
+{% endif %}
+{% else %}
+<div class="panel panel-default">
+  <div class="panel-heading">
+    Table of ingested gauges
+  </div>
+  <div id="gauges-nav-no-data">
+    <br/>
+    <p style="text-indent: 1em">There have been not found any "gauges" with the requested filters.</p>
+    <br/>
   </div>
   <!-- /.panel-body -->
 </div>
