Change message when no results are found

--- a/src/vboa/templates/eboa_nav/annotation_cnfs_nav.html
+++ b/src/vboa/templates/eboa_nav/annotation_cnfs_nav.html
@@ -51,7 +51,7 @@
   {% else %}
   <div id="annotation-cnfs-nav-no-data">
     <br/>
-    <p style="text-indent: 1em">There have been not found any "annotation configurations" with the requested filters.</p>
+    <p style="text-indent: 1em">No "annotation configurations" have been found with the requested filters.</p>
     <br/>
   </div>
   {% endif %}
