--- a/src/vboa/templates/eboa_nav/events_nav.html
+++ b/src/vboa/templates/eboa_nav/events_nav.html
@@ -111,7 +111,7 @@
   </div>
   <div id="events-nav-no-data">
     <br/>
-    <p style="text-indent: 1em">There have been not found any "events" with the requested filters.</p>
+    <p style="text-indent: 1em">No "events" have been found with the requested filters.</p>
     <br/>
   </div>
   <!-- /.panel-body -->
