--- a/src/vboa/templates/eboa_nav/explicit_references_nav.html
+++ b/src/vboa/templates/eboa_nav/explicit_references_nav.html
@@ -59,7 +59,7 @@
   {% else %}
   <div id="explicit-refs-nav-no-data">
     <br/>
-    <p style="text-indent: 1em">There have been not found any "explicit reference" with the requested filters.</p>
+    <p style="text-indent: 1em">No "explicit references" have been found with the requested filters.</p>
     <br/>
   </div>
   {% endif %}
