--- a/src/vboa/templates/eboa_nav/gauges_nav.html
+++ b/src/vboa/templates/eboa_nav/gauges_nav.html
@@ -72,7 +72,7 @@
   </div>
   <div id="gauges-nav-no-data">
     <br/>
-    <p style="text-indent: 1em">There have been not found any "gauges" with the requested filters.</p>
+    <p style="text-indent: 1em">No "gauges" have been found with the requested filters.</p>
     <br/>
   </div>
   <!-- /.panel-body -->
