--- a/src/vboa/templates/eboa_nav/annotations_nav.html
+++ b/src/vboa/templates/eboa_nav/annotations_nav.html
@@ -81,7 +81,7 @@
   </div>
   <div id="annotations-nav-no-data">
     <br/>
-    <p style="text-indent: 1em">There have been not found any "annotations" with the requested filters.</p>
+    <p style="text-indent: 1em">No "annotations" have been found with the requested filters.</p>
     <br/>
   </div>
   <!-- /.panel-body -->
