--- a/src/vboa/templates/eboa_nav/dim_signatures_nav.html
+++ b/src/vboa/templates/eboa_nav/dim_signatures_nav.html
@@ -54,7 +54,7 @@
   {% else %}
   <div id="dim-signatures-nav-no-data">
     <br/>
-    <p style="text-indent: 1em">There have been not found any "dim signatures" with the requested filters.</p>
+    <p style="text-indent: 1em">No "dim signatures" have been found with the requested filters.</p>
     <br/>
   </div>
   {% endif %}
