--- a/src/vboa/templates/eboa_nav/sources_nav.html
+++ b/src/vboa/templates/eboa_nav/sources_nav.html
@@ -251,7 +251,7 @@
   </div>
   <div id="sources-nav-no-data">
     <br/>
-    <p style="text-indent: 1em">There have been not found any "sources" with the requested filters.</p>
+    <p style="text-indent: 1em">No "sources" have been found with the requested filters..</p>
     <br/>
   </div>
   <!-- /.panel-body -->
