--- a/src/vboa/templates/eboa_nav/sources_nav.html
+++ b/src/vboa/templates/eboa_nav/sources_nav.html
@@ -22,6 +22,7 @@
     <table width="100%" class="table table-striped table-bordered table-hover table-search" id="sources-tables">
       <thead>
         <tr>
+          <th></th>
           <th>Name</th>
           <th>Events</th>
           <th>Annotations</th>
@@ -38,6 +39,7 @@
       <tbody>
         {% for source in not_ingested_sources %}
         <tr>
+          <td><i id="expand-source-ingestion-success-statuses-{{ source.source_uuid }}" class="fa fa-plus-square green" aria-hidden="true" onclick="vboa.expand_source_statuses('expand-source-ingestion-success-statuses-{{ source.source_uuid }}', '{{ source.source_uuid }}')" data-toggle="tooltip" title="Click to show the related statuses"></i></td>
           <td>{{ source.name }}</td>
           <td><a href="/eboa_nav/query-events-by-source-uuid/{{ source.source_uuid }}"><i class="fa fa-link"></i></a></td>
           <td><a href="/eboa_nav/query-annotations-by-source-uuid/{{ source.source_uuid }}"><i class="fa fa-link"></i></a></td>
@@ -58,6 +60,7 @@
       </tbody>
       <tfoot>
         <tr>
+          <th></th>
           <th>Name</th>
           <th>Events</th>
           <th>Annotations</th>          
@@ -87,6 +90,7 @@
     <table width="100%" class="table table-striped table-bordered table-hover table-search" id="sources-table">
       <thead>
         <tr>
+          <th></th>
           <th>Name</th>
           <th>Events</th>
           <th>Annotations</th>
@@ -114,6 +118,7 @@
       <tbody>
         {% for source in sources if source.ingestion_duration %}
         <tr>
+          <td><i id="expand-source-ingestion-success-statuses-{{ source.source_uuid }}" class="fa fa-plus-square green" aria-hidden="true" onclick="vboa.expand_source_statuses('expand-source-ingestion-success-statuses-{{ source.source_uuid }}', '{{ source.source_uuid }}')" data-toggle="tooltip" title="Click to show the related statuses"></i></td>
           <td>{{ source.name }}</td>
           <td><a href="/eboa_nav/query-events-by-source-uuid/{{ source.source_uuid }}"><i class="fa fa-link"></i></a></td>
           <td><a href="/eboa_nav/query-annotations-by-source-uuid/{{ source.source_uuid }}"><i class="fa fa-link"></i></a></td>
@@ -145,6 +150,7 @@
       </tbody>
       <tfoot>
         <tr>
+          <th></th>
           <th>Name</th>
           <th>Events</th>
           <th>Annotations</th>
