--- a/src/vboa/templates/ingestion_control/ingestion_control.html
+++ b/src/vboa/templates/ingestion_control/ingestion_control.html
@@ -13,7 +13,7 @@
 
 {% set alerts = sources|rejectattr("alerts", "equalto", [])|map(attribute="alerts")|list|flatten %}
 {% set ingestion_errors = sources|selectattr("ingestion_error", "equalto", True)|list %}
-{% set sources_to_be_shown = sources|rejectattr("ingestion_error", "equalto", True)|list %}
+{% set incomplete_ingestions = sources|rejectattr("ingestion_error", "equalto", True)|rejectattr("ingestion_completeness", "equalto", True)|list %}
 {% set successful_processings = sources|selectattr("ingested", "equalto", True)|list %}
 
 {% with show = {"expected": True, "successful": True, "errors": True, "alerts": True} %}
@@ -23,104 +23,23 @@
 {% include "ingestion_control/ingestion_control_alerts_content.html" %}
 {% include "ingestion_control/ingestion_control_errors_content.html" %}
 
-{% if sources_to_be_shown|length > 0 %}
+{% if sources|length > 0 %}
 <div class="row">
   <div class="panel panel-default">
     <div class="panel-heading">
       <h3 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#ingested-sources-ingestion-control">Sources ingested successfully <span class="fa fa-angle-double-down"></span></a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#ingestions-status-ingestion-control">Sources ingested successfully <span class="fa fa-angle-double-down"></span></a>
       </h3>
     </div>
     <!-- /.panel-heading -->
-    <div class="panel-body panel-collapse collapse in" id="ingested-sources-ingestion-control">
+    <div class="panel-body panel-collapse collapse in" id="ingestions-status-ingestion-control">
       <div>
-        <h3><u>Table of sources successfully or being ingested</u></h3>
+        <h3><u>Table of ingestions in progress or successfully/unsuccessfully finished</u></h3>
       </div>
-      <table width="100%" class="table table-striped table-bordered table-hover table-search" id="ingested-sources-ingestion-control-table">
-        <thead>
-          <tr>
-            <th></th>
-            <th>Name</th>
-            <th>DIM signature</th>
-            <th>Ingestion progress</th>
-            <th>Processor progress</th>
-            <th>Ingestion completeness</th>
-            <th>Triggering duration</th>
-            <th>Ingestion duration</th>
-            <th>Processing duration</th>
-            <th>Validity start</th>
-            <th>Validity stop</th>
-            <th>Duration</th>
-            <th>Number of events</th>
-            <th>Reception time</th>
-            <th>Generation time</th>
-            <th>Ingestion time</th>
-            <th>Processor</th>
-            <th>Processor version</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for source in sources_to_be_shown %}
-          <tr>
-            <td><i id="expand-source-ingestion-success-statuses-{{ source.source_uuid }}" class="fa fa-plus-square green" aria-hidden="true" onclick="vboa.expand_source_statuses('expand-source-ingestion-success-statuses-{{ source.source_uuid }}', '{{ source.source_uuid }}')" data-toggle="tooltip" title="Click to show the related statuses"></i></td>
-            <td><a href="/eboa_nav/query-sources-by-name/{{ source.name }}">{{ source.name }}</a></td>
-            <td>{{ source.dimSignature.dim_signature }}</td>
-            {% with progress = source.get_ingestion_progress(), error = False %}
-            {% include "vboa/progress_bar.html" %}
-            {% endwith %}
-            {% with progress = source.get_processor_progress(), error = False %}
-            {% include "vboa/progress_bar.html" %}
-            {% endwith %}
-            <td>{{ source.ingestion_completeness }}</td>
-            <td>{{ source.get_triggering_duration() }}</td>
-            <td>{{ source.ingestion_duration }}</td>
-            <td>{{ source.processing_duration }}</td>
-            {% with date = source.validity_start %}
-            {% include "vboa/date_td_value.html" %}
-            {% endwith %}
-            {% with date = source.validity_stop %}
-            {% include "vboa/date_td_value.html" %}
-            {% endwith %}
-            {% with date1 = source.validity_start, date2 = source.validity_stop %}
-            {% include "vboa/difference_date_td_value.html" %}
-            {% endwith %}
-            <td>{{ source.events|length }}</td>
-            {% with date = source.reception_time %}
-            {% include "vboa/date_td_value.html" %}
-            {% endwith %}
-            {% with date = source.generation_time %}
-            {% include "vboa/date_td_value.html" %}
-            {% endwith %}
-            {% with date = source.ingestion_time %}
-            {% include "vboa/date_td_value.html" %}
-            {% endwith %}
-            <td>{{ source.processor }}</td>
-            <td>{{ source.processor_version }}</td>
-          </tr>
-          {% endfor %}
-        </tbody>
-        <tfoot>
-          <tr>
-            <th></th>
-            <th>Name</th>
-            <th>DIM signature</th>
-            <th>Ingestion progress</th>
-            <th>Processor progress</th>
-            <th>Ingestion completeness</th>
-            <th>Triggering duration</th>
-            <th>Ingestion duration</th>
-            <th>Processing duration</th>
-            <th>Validity start</th>
-            <th>Validity stop</th>
-            <th>Duration</th>
-            <th>Number of events</th>
-            <th>Reception time</th>
-            <th>Generation time</th>
-            <th>Ingestion time</th>
-            <th>Processor</th>
-            <th>Processor version</th>
-          </tr>
-        </tfoot>
+      <table width="100%" class="table table-striped table-bordered table-hover table-search" id="ingestions-status-ingestion-control-table">
+        {% with sources = sources %}
+        {% include "ingestion_control/ingestion_table_content.html" %}
+        {% endwith %}
       </table>
     </div>
   </div>
