--- a/src/vboa/templates/ingestion_control/ingestion_control_alerts_content.html
+++ b/src/vboa/templates/ingestion_control/ingestion_control_alerts_content.html
@@ -1,15 +1,15 @@
 {% if alerts|length > 0 %}
 <div class="row">
-  <div class="panel panel-default">
+  <div class="panel panel-red">
     <div class="panel-heading">
       <h3 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#associated-ingestion-control-alerts" style="color:red">Associated alerts <span class="fa fa-angle-double-down"></span></a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#associated-ingestion-control-alerts">Associated alerts <span class="fa fa-angle-double-down"></span></a>
       </h3>
     </div>
     <!-- /.panel-heading -->
     <div class="panel-body panel-collapse collapse in" id="associated-ingestion-control-alerts">
       <div>
-        <h3 style="color:red"><u>Table of alerts</u></h3>
+        <h3><u>Table of alerts</u></h3>
       </div>
       <p>
         The following table shows the list alerts associated to the ingestion processes:
