--- a/src/vboa/templates/ingestion_control/ingestion_control_errors_content.html
+++ b/src/vboa/templates/ingestion_control/ingestion_control_errors_content.html
@@ -1,102 +1,48 @@
+{% if ingestion_errors|length > 0 or incomplete_ingestions|length > 0 %}
 {% if ingestion_errors|length > 0 %}
 <div class="row">
-  <div class="panel panel-default">
+  <div class="panel panel-red">
     <div class="panel-heading">
       <h3 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#ingested-sources-ingestion-control">Ingested errors <span class="fa fa-angle-double-down"></span></a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#ingestion-errors-ingestion-control">Ingestion errors <span class="fa fa-angle-double-down"></span></a>
       </h3>
     </div>
     <!-- /.panel-heading -->
-    <div class="panel-body panel-collapse collapse in" id="ingested-sources-ingestion-control">
+    <div class="panel-body panel-collapse collapse in" id="ingestion-errors-ingestion-control">
       <div>
         <h3><u>Table of ingestion errors</u></h3>
       </div>
-      <table width="100%" class="table table-striped table-bordered table-hover table-search" id="ingested-sources-ingestion-error-table">
-        <thead>
-          <tr>
-            <th></th>
-            <th>Name</th>
-            <th>DIM signature</th>
-            <th>Ingestion progress</th>
-            <th>Processor progress</th>
-            <th>Ingestion completeness</th>
-            <th>Triggering duration</th>
-            <th>Ingestion duration</th>
-            <th>Processing duration</th>
-            <th>Validity start</th>
-            <th>Validity stop</th>
-            <th>Duration</th>
-            <th>Reception time</th>
-            <th>Generation time</th>
-            <th>Ingestion time</th>
-            <th>Processor</th>
-            <th>Processor version</th>
-          </tr>
-        </thead>
-        <tbody>
-          {% for source in ingestion_errors %}
-          <tr>
-            <td><i id="expand-source-ingestion-error-statuses-{{ source.source_uuid }}" class="fa fa-plus-square green" aria-hidden="true" onclick="vboa.expand_source_statuses('expand-source-ingestion-error-statuses-{{ source.source_uuid }}', '{{ source.source_uuid }}')" data-toggle="tooltip" title="Click to show the related statuses"></i></td>
-            <td><a href="/eboa_nav/query-sources-by-name/{{ source.name }}">{{ source.name }}</a></td>
-            <td>{{ source.dimSignature.dim_signature }}</td>
-            {% with progress = source.get_ingestion_progress(), error = True %}
-            {% include "vboa/progress_bar.html" %}
-            {% endwith %}
-            {% with progress = source.get_processor_progress(), error = True %}
-            {% include "vboa/progress_bar.html" %}
-            {% endwith %}
-            <td>{{ source.ingestion_completeness }}</td>
-            <td>{{ source.get_triggering_duration() }}</td>
-            <td>{{ source.ingestion_duration }}</td>
-            <td>{{ source.processing_duration }}</td>
-            {% with date = source.validity_start %}
-            {% include "vboa/date_td_value.html" %}
-            {% endwith %}
-            {% with date = source.validity_stop %}
-            {% include "vboa/date_td_value.html" %}
-            {% endwith %}
-            {% with date1 = source.validity_start, date2 = source.validity_stop %}
-            {% include "vboa/difference_date_td_value.html" %}
-            {% endwith %}
-            {% with date = source.reception_time %}
-            {% include "vboa/date_td_value.html" %}
-            {% endwith %}
-            {% with date = source.generation_time %}
-            {% include "vboa/date_td_value.html" %}
-            {% endwith %}
-            {% with date = source.ingestion_time %}
-            {% include "vboa/date_td_value.html" %}
-            {% endwith %}
-            <td>{{ source.processor }}</td>
-            <td>{{ source.processor_version }}</td>
-          </tr>
-          {% endfor %}
-        </tbody>
-        <tfoot>
-          <tr>
-            <th></th>
-            <th>Name</th>
-            <th>DIM signature</th>
-            <th>Ingestion progress</th>
-            <th>Processor progress</th>
-            <th>Ingestion completeness</th>
-            <th>Triggering duration</th>
-            <th>Ingestion duration</th>
-            <th>Processing duration</th>
-            <th>Validity start</th>
-            <th>Validity stop</th>
-            <th>Duration</th>
-            <th>Reception time</th>
-            <th>Generation time</th>
-            <th>Ingestion time</th>
-            <th>Processor</th>
-            <th>Processor version</th>
-          </tr>
-        </tfoot>
+      <table width="100%" class="table table-striped table-bordered table-hover table-search" id="ingestion-errors-table">
+        {% with sources = ingestion_errors %}
+        {% include "ingestion_control/ingestion_table_content.html" %}
+        {% endwith %}
       </table>
     </div>
   </div>
 </div>
+{% endif %}
+{% if incomplete_ingestions|length > 0 %}
+<div class="row">
+  <div class="panel panel-red">
+    <div class="panel-heading">
+      <h3 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#incomplete-ingestions-ingestion-control">Incomplete ingestions <span class="fa fa-angle-double-down"></span></a>
+      </h3>
+    </div>
+    <!-- /.panel-heading -->
+    <div class="panel-body panel-collapse collapse in" id="incomplete-ingestions-ingestion-control">
+      <div>
+        <h3><u>Table of incomplete ingestions</u></h3>
+      </div>
+      <table width="100%" class="table table-striped table-bordered table-hover table-search" id="incomplete-ingestions-table">
+        {% with sources = incomplete_ingestions %}
+        {% include "ingestion_control/ingestion_table_content.html" %}
+        {% endwith %}
+      </table>
+    </div>
+  </div>
+</div>
+{% endif %}
 {% else %}
 <div class="row">
   <div class="panel panel-default">
