Make the loader to appear in the centre of the screen no matter the position of the scroll

--- a/src/vboa/static/css/vboa.css
+++ b/src/vboa/static/css/vboa.css
@@ -370,7 +370,7 @@ input[type="checkbox"]:disabled + .label-text:before{
   animation: spin 2s linear infinite;
 }
 .loader-render {
-  position: absolute;
+  position: fixed;
   left: 50%;
   top: 50%;
   z-index: 10;
