--- a/src/vboa/templates/ingestion_control/ingestion_control.html
+++ b/src/vboa/templates/ingestion_control/ingestion_control.html
@@ -20,47 +20,38 @@
 {% include "ingestion_control/ingestion_control_summary_content.html" %}
 {% endwith %}
 
+{% if sources|length > 0 %}
 {% include "ingestion_control/ingestion_control_alerts_content.html" %}
 {% include "ingestion_control/ingestion_control_errors_content.html" %}
 
-{% if sources|length > 0 %}
 <div class="row">
   <div class="panel panel-default">
-    <div class="panel-heading">
-      <h3 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#ingestions-status-ingestion-control">Sources ingested successfully <span class="fa fa-angle-double-down"></span></a>
-      </h3>
-    </div>
-    <!-- /.panel-heading -->
-    <div class="panel-body panel-collapse collapse in" id="ingestions-status-ingestion-control">
-      <div>
-        <h3><u>Table of ingestions in progress or successfully/unsuccessfully finished</u></h3>
+      <div class="panel-heading">
+        <h3 class="panel-title">
+          <a data-toggle="collapse" data-parent="#accordion" href="#ingestions-status-ingestion-control">Ingestions in progress or successfully/unsuccessfully finished <span class="fa fa-angle-double-down"></span></a>
+        </h3>
       </div>
-      <table width="100%" class="table table-striped table-bordered table-hover table-search" id="ingestions-status-ingestion-control-table">
-        {% with sources = sources %}
-        {% include "ingestion_control/ingestion_table_content.html" %}
-        {% endwith %}
-      </table>
-    </div>
+      <!-- /.panel-heading -->
+      <div class="panel-body panel-collapse collapse in" id="ingestions-status-ingestion-control">
+        <div>
+          <h3><u>Table of ingestions in progress or successfully/unsuccessfully finished</u></h3>
+        </div>
+        <form role="form" id="ingestions-status-ingestion-control-operations" method=post onSubmit="vboa.submit_request_for_ingestion_management(this.id); return false;">    
+          <table width="100%" class="table table-striped table-bordered table-hover table-search-checkboxes" id="ingestions-status-ingestion-control-table">
+            {% with sources = sources %}
+            {% include "ingestion_control/ingestion_table_content.html" %}
+            {% endwith %}
+          </table>
+          <div class="row" style="margin-bottom: 20px; margin-top: 20px">
+            <div align="center">
+              <button type="submit" onclick="this.form.operation='reingestion_preparation'" class="btn btn-primary" style="margin-top: 12px" id="ingestion-control-reingetion-button">Re-ingest</button>
+              <button type="submit" onclick="this.form.operation='deletion_preparation'" class="btn btn-primary" style="margin-top: 12px" id="ingestion-control-deletion-button">Delete</button>
+            </div>
+          </div>
+        </form>
+      </div>
   </div>
 </div>
-{% else %}
-<div class="row">
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h3 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#no-sources-ingestion-control">Ingestion control status <span class="fa fa-angle-double-down"></span></a>
-      </h3>
-    </div>
-    <div class="panel-body panel-collapse collapse" id="no-sources-ingestion-control">
-      <div>
-          <p id="no-sources-ingestion-control" style="text-indent: 1em">There are no sources being ingested during the requested period.</p>
-        <br/>
-      </div>
-    </div>
-  </div>
-</div>
-{% endif %}
 <div class="row">
   <div class="panel panel-default">
     <div class="panel-heading">
@@ -68,7 +59,6 @@
         <a data-toggle="collapse" data-parent="#accordion" href="#graphs-ingestion-control">Detailed graphs of the ingestion control <span class="fa fa-angle-double-down"></span></a>
       </h3>
     </div>
-    {% if sources|length > 0 %}
     <div class="panel-body panel-collapse collapse in" id="graphs-ingestion-control">
       <!-- /.panel-heading -->
       {% if not show or show["validity_timeline"] %}
@@ -78,7 +68,7 @@
         </div>
         <!-- /.panel-heading -->
         <div class="panel-body">
-          <div id="sources-nav-validity-timeline">
+          <div id="ingestion-control-validity-timeline">
           </div>
         </div>
         <!-- /.panel-body -->
@@ -92,7 +82,7 @@
         </div>
         <!-- /.panel-heading -->
         <div class="panel-body">
-          <div id="sources-nav-generation-to-ingestion-timeline">
+          <div id="ingestion-control-generation-to-ingestion-timeline">
           </div>
         </div>
         <!-- /.panel-body -->
@@ -106,7 +96,7 @@
         </div>
         <!-- /.panel-heading -->
         <div class="panel-body">
-          <div id="sources-nav-number-events-xy">
+          <div id="ingestion-control-number-events-xy">
           </div>
         </div>
         <!-- /.panel-body -->
@@ -120,7 +110,7 @@
         </div>
         <!-- /.panel-heading -->
         <div class="panel-body">
-          <div id="sources-nav-ingestion-duration-xy">
+          <div id="ingestion-control-ingestion-duration-xy">
           </div>
         </div>
         <!-- /.panel-body -->
@@ -134,24 +124,33 @@
         </div>
         <!-- /.panel-heading -->
         <div class="panel-body">
-          <div id="sources-nav-generation-time-to-ingestion-time-xy">
+          <div id="ingestion-control-generation-time-to-ingestion-time-xy">
           </div>
         </div>
         <!-- /.panel-body -->
       </div>
+      {% endif %}
       <!-- /.panel -->
-      {% endif %}
-      {% else %}
-      <div class="panel-body panel-collapse collapse" id="ingestion-control-status">
-        <div>
-          <p id="no-sources-no-graphs-ingestion-control" style="text-indent: 1em">There are no sources for showing detailed graphs.</p>
-          <br/>
-        </div>
-      </div>
-      {% endif %}
     </div>
   </div>
 </div>
+{% else %}
+<div class="row">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">
+        <a data-toggle="collapse" data-parent="#accordion" href="#no-sources-ingestion-control">Ingestion control status <span class="fa fa-angle-double-down"></span></a>
+      </h3>
+    </div>
+    <div class="panel-body panel-collapse" id="no-sources-ingestion-control">
+      <div>
+          <p id="no-sources-ingestion-control" style="text-indent: 1em">There are no sources during the requested period.</p>
+        <br/>
+      </div>
+    </div>
+  </div>
+</div>
+{% endif %}
 {% endblock %}
 {% block scripts %}
 {{ super() }}
@@ -161,19 +160,19 @@
   {% include "graphs/sources_to_json.js" %}
   {% endwith %}
   {% if not show or show["validity_timeline"] %}
-  vboa.create_source_validity_timeline(sources, "sources-nav-validity-timeline");
+  vboa.create_source_validity_timeline(sources, "ingestion-control-validity-timeline");
   {% endif %}
   {% if not show or show["generation_to_ingestion_timeline"] %}
-  vboa.create_source_generation_to_ingestion_timeline(sources, "sources-nav-generation-to-ingestion-timeline");
+  vboa.create_source_generation_to_ingestion_timeline(sources, "ingestion-control-generation-to-ingestion-timeline");
   {% endif %}
   {% if not show or show["number_events_xy"] %}
-  vboa.create_source_number_events_xy(sources, "sources-nav-number-events-xy");
+  vboa.create_source_number_events_xy(sources, "ingestion-control-number-events-xy");
   {% endif %}
   {% if not show or show["ingestion_duration_xy"] %}
-  vboa.create_source_ingestion_duration_xy(sources, "sources-nav-ingestion-duration-xy");
+  vboa.create_source_ingestion_duration_xy(sources, "ingestion-control-ingestion-duration-xy");
   {% endif %}
   {% if not show or show["generation_time_to_ingestion_time_xy"] %}
-  vboa.create_source_generation_time_to_ingestion_time_xy(sources, "sources-nav-generation-time-to-ingestion-time-xy");
+  vboa.create_source_generation_time_to_ingestion_time_xy(sources, "ingestion-control-generation-time-to-ingestion-time-xy");
   {% endif %}
   {% endif %}
   {% if sliding_window %}
