--- a/src/vboa/templates/ingestion_control/ingestion_control_alerts_content.html
+++ b/src/vboa/templates/ingestion_control/ingestion_control_alerts_content.html
@@ -18,7 +18,7 @@
       <br/>
       <br/>
 
-      <table width="100%" class="table table-striped table-bordered table-hover table-search" id="associated-ingestion-control-alerts-details-table">
+      <table width="100%" class="table table-striped table-bordered table-hover table-search" id="ingestion-control-alerts-details-table">
         <thead>
           <tr>
             <th>Severity</th>
@@ -67,13 +67,13 @@
 </div>
 {% else %}
 <div class="row">
-  <div class="panel panel-default">
+  <div class="panel panel-green">
     <div class="panel-heading">
       <h3 class="panel-title">
-        <a data-toggle="collapse" data-parent="#accordion" href="#ingestion-alerts">Ingestion alerts <span class="fa fa-angle-double-down"></span></a>
+        <a data-toggle="collapse" data-parent="#accordion" href="#no-ingestion-alerts">Ingestion alerts <span class="fa fa-angle-double-down"></span></a>
       </h3>
     </div>
-    <div class="panel-body panel-collapse collapse" id="ingestion-alerts">
+    <div class="panel-body panel-collapse" id="no-ingestion-alerts">
       <div>
         <p id="no-ingestion-control-alerts-data" style="text-indent: 1em">There are no alerts during the requested period.</p>
         <br/>
