Avoid showing index for error page

--- a/src/vboa/templates/panel/error.html
+++ b/src/vboa/templates/panel/error.html
@@ -1,10 +1,7 @@
 {% extends "panel/index.html" %}
 {% block content %}
-<div class="row">
-  <div class="col-lg-12">
+<div class="row panel-no-index">
     <h1 class="page-header">Ups... Sorry the page you requested was not found or it is corrupted</h1>
-  </div>
-  <!-- /.col-lg-12 -->  
 </div>
 <div>
   <img style="display:inline" src="{{ url_for('static', filename='images/boa_favicon.png') }}"/>
